--- a/apps/api/config/routing.yml
+++ b/apps/api/config/routing.yml
@@ -1,3 +1,7 @@
+r_invite:
+  url: /r/invite.json
+  param: { module: r, action: invite, sf_format: json }
+  requirements: { sf_method: [post] }
 r_mail:
   url: /r/mail.json
   param: { module: r, action: mail, sf_format: json }
